2011-08-25  Jeremy Moskovich  <jeremy@chromium.org>

        Remove ATSFont*() functions in favor of CGFont in FontCustomPlatformData.cpp
        https://bugs.webkit.org/show_bug.cgi?id=66629

        As of r72774 and dropping support for OS X 10.4, we can safely
        remove the ATS APIs from FontCustomPlatformData.cpp in favor of just the
        CGFont code.

        This change is motivated by a bug in ATSFontDeactivite() on 10.7 which
        affects the Chromium port, due to its compiling once against the 10.5
        SDK for all platforms - See crbug.com/93191 or rdar://9976774 .

        Reviewed by Dan Bernstein.

        No new tests - covered by existing tests.

        * platform/graphics/mac/FontCustomPlatformData.cpp:
        (WebCore::FontCustomPlatformData::~FontCustomPlatformData):
        (WebCore::createFontCustomPlatformData):
        * platform/graphics/mac/FontCustomPlatformData.h:
        (WebCore::FontCustomPlatformData::FontCustomPlatformData):

2011-08-25  Pavel Feldman  <pfeldman@google.com>

        Not reviewed: rollout r93768 for breaking build.

        * inspector/DOMNodeHighlighter.cpp:

2011-08-24  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: split ConsoleView into the View and the Model.
        https://bugs.webkit.org/show_bug.cgi?id=66861

        Reviewed by Yury Semikhatsky.

        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * inspector/compile-front-end.sh:
        * inspector/front-end/BreakpointManager.js:
        * inspector/front-end/ConsoleMessage.js:
        (WebInspector.ConsoleMessage.prototype._format):
        * inspector/front-end/ConsoleModel.js: Added.
        (WebInspector.ConsoleModel):
        (WebInspector.ConsoleModel.prototype._setConsoleMessageExpiredCount):
        (WebInspector.ConsoleModel.prototype.addMessage):
        (WebInspector.ConsoleModel.prototype._incrementErrorWarningCount):
        (WebInspector.ConsoleModel.prototype.requestClearMessages):